feat: JDK17 retrocompatibility see ICIJ/datashare#1084